# ExpenseTracker

./: .gitignore  READMI.md  config.py  main.py  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 60b0639df667_add_sub_fix.py  86e3fc414863_add_sub.py  ed880b92ff8d_init_migration.py
common_utils/redis/: __init__.py  cache_sub.py  client.py  email_reminder.py  redis.conf
common_utils/redis/redis_data/: appendonly.aof  dump.rdb
common_utils/utils/: auth.py  calculate_payday.py  cookies.py  jwt.py
database/: connect.py
database/entities/: __init__.py  frequency.py  subscription.py  user.py
notification_service/: main.py
subscriber_service/: main.py  router.py
subscriber_service/models/: frequency.py  subscription.py
subscriber_servise/: main.py  router.py
subscriber_servise/models/: __init__.py  frequency.py  subscription.py
user_service/: main.py  router.py
user_service/models/: __init__.py  user.py
user_service/utils/: auth.py  cookies.py  jwt.py
