[project]
name = "expensetracker"
version = "0.1.0"
description = "Приложение для отслеживания трат и подписок с уведомлением на почту за 3 дня до списания средств с напоминанием пополнить счет"
authors = [
    {name = "panchenkogit",email = "odosaol@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib (==4.0.1)",
    "alembic (==1.14.1)",
    "amqp (==5.3.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "apscheduler (==3.11.0)",
    "asyncpg (==0.30.0)",
    "bcrypt (==4.2.1)",
    "billiard (==4.2.1)",
    "black (==25.1.0)",
    "celery (==5.4.0)",
    "certifi (==2025.1.31)",
    "click (==8.1.8)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1)",
    "click-repl (==0.3.0)",
    "colorama (==0.4.6)",
    "dnspython (==2.7.0)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.8)",
    "fastapi-cli (==0.0.7)",
    "flower (==2.0.1)",
    "greenlet (==3.1.1)",
    "h11 (==0.14.0)",
    "hiredis (==3.1.0)",
    "httpcore (==1.0.7)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "humanize (==4.11.0)",
    "idna (==3.10)",
    "iniconfig (==2.0.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.5)",
    "kombu (==5.4.2)",
    "mako (==1.3.9)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mdurl (==0.1.2)",
    "mypy-extensions (==1.1.0)",
    "orjson (==3.10.15)",
    "packaging (==24.2)",
    "passlib (==1.7.4)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.7)",
    "pluggy (==1.5.0)",
    "prometheus-client (==0.21.1)",
    "prompt-toolkit (==3.0.50)",
    "pydantic (==2.10.6)",
    "pydantic-extra-types (==2.10.2)",
    "pydantic-settings (==2.7.1)",
    "pydantic-core (==2.27.2)",
    "pygments (==2.19.1)",
    "pyjwt (==2.10.1)",
    "pytest (==8.3.4)",
    "pytest-asyncio (==0.25.3)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.0.1)",
    "python-multipart (==0.0.20)",
    "pytz (==2025.1)",
    "pyyaml (==6.0.2)",
    "redis (==5.2.1)",
    "rich (==13.9.4)",
    "rich-toolkit (==0.13.2)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.38)",
    "starlette (==0.45.3)",
    "tornado (==6.4.2)",
    "typer (==0.15.1)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2025.1)",
    "tzlocal (==5.3.1)",
    "ujson (==5.10.0)",
    "uvicorn (==0.34.0)",
    "vine (==5.1.0)",
    "watchfiles (==1.0.4)",
    "wcwidth (==0.2.13)",
    "websockets (==14.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
